--- a/src/config/parameters.yaml
+++ b/src/config/parameters.yaml
@@ -23,3 +23,8 @@ reaction_parameters:
   Kpw: 0.035
   V2: 77.4e-6 # m³
   rho: 0.9
+iterational_parameters:
+  lower_A_bound: 5.85e6
+  upper_A_bound: 5.888e6
+  lower_B_bound: 3.1e3
+  upper_B_bound: 3.150e3
