--- a/src/config/parameters.yaml
+++ b/src/config/parameters.yaml
@@ -24,6 +24,8 @@ reaction_parameters:
   V2: 77.4e-6 # m³
   rho: 0.9
 iterational_parameters:
+  # B and A are the reactants
+  steps: 1
   lower_A_bound: 5.85e6
   upper_A_bound: 5.888e6
   lower_B_bound: 3.1e3
