--- a/src/config/parameters.yaml
+++ b/src/config/parameters.yaml
@@ -26,7 +26,12 @@ reaction_parameters:
 iterational_parameters:
   # B and A are the reactants
   steps: 20
-  lower_A_bound: 5.85e6
-  upper_A_bound: 5.888e6
-  lower_B_bound: 3.1e3
-  upper_B_bound: 3.150e3
+  lower_A_bound: 1e3
+  upper_A_bound: 10e3
+  lower_B_bound: 5e6
+  upper_B_bound: 50e6
+
+#  lower_A_bound: 5.85e6
+#  upper_A_bound: 5.888e6
+#  lower_B_bound: 3.1e3
+#  upper_B_bound: 3.150e3
